--- a/client/src/app/components/shared/event-feed/event-feed.component.less
+++ b/client/src/app/components/shared/event-feed/event-feed.component.less
@@ -13,4 +13,10 @@
   nz-form-item:last-child {
     margin-right: 0;
   }
+  #participant-filter {
+    width: 200px;
+  }
+  #organization-filter {
+    width: 250px;
+  }
 }
