--- a/client/src/app/components/shared/event-timeline/event-timeline.component.html
+++ b/client/src/app/components/shared/event-timeline/event-timeline.component.html
@@ -2,62 +2,126 @@
   <ng-container *ngFor="let event of events">
     <nz-timeline-item [nzDot]="timelineDotTemplate">
       <ng-template #timelineDotTemplate>
-        <cvc-user-avatar [user]="event.originatingUser"
-          size="small"></cvc-user-avatar>
+        <ng-container *ngIf="event.originatingObject as originating"
+          [ngSwitch]="originating.__typename">
+          <cvc-user-avatar *ngSwitchCase="'Comment'"
+            [user]="event.originatingUser"
+            size="small"></cvc-user-avatar>
 
+          <i *ngSwitchDefault
+            nz-icon
+            [nzType]="iconNameForEventAction(event.action)"
+            nzTheme="twotone"
+            class="item-icon"></i>
+        </ng-container>
         <!-- <ng-container *ngIf="iconColorForEventAction(event.action) !== 'default'; else defaultPrimaryColor">
              <i nz-icon
              [nzType]="iconNameForEventAction(event.action)"
              [nzTwotoneColor]="iconColorForEventAction(event.action)"
              nzTheme="twotone"
              class="item-icon"></i>
-             </ng-container>
-             <ng-template #defaultPrimaryColor>
-             <i nz-icon
-             [nzType]="iconNameForEventAction(event.action)"
-             nzTheme="twotone"
-             class="item-icon"></i>
-             </ng-template> -->
+             </ng-container> -->
       </ng-template>
-      <nz-row class="timeline-item">
-        <nz-col nzFlex="auto" class="description">
 
-          <!-- user tag -->
-          <cvc-user-tag [user]="event.originatingUser"></cvc-user-tag>
+      <!-- display full description row unless Comment type -->
+      <nz-row class="timeline-item"
+        *ngIf="event.originatingObject as object"
+        [ngSwitch]="object.__typename">
 
-          <!-- verb -->
-          <span nz-typography>{{ verbiageForEvent(event) }}&nbsp;</span>
+        <!-- default full description -->
+        <ng-container *ngSwitchDefault>
+          <nz-col nzFlex="auto"
+            class="description">
 
-          <!-- originating object -->
-          <ng-container *ngIf="event.originatingObject as object"
-            [ngSwitch]="object.__typename">
-            <cvc-revision-tag *ngSwitchCase="'Revision'" [revision]="object"></cvc-revision-tag>
-            <span nz-typography *ngSwitchDefault>{{ object.name }}</span>
-          </ng-container>
-          <!-- preposition -->
-          <span nz-typography>{{ prepositionForSubject(event) }}&nbsp;</span>
-          <!-- event subject -->
-          <ng-container [ngSwitch]="event.subject.__typename">
-            <ng-container *ngSwitchCase="'Gene'">
-              <cvc-gene-tag [gene]="event.subject"></cvc-gene-tag>
+            <!-- user tag -->
+            <cvc-user-tag [user]="event.originatingUser"></cvc-user-tag>
+
+            <!-- verb -->
+            <span nz-typography>{{ verbiageForEvent(event) }}&nbsp;</span>
+
+            <!-- originating object -->
+            <ng-container *ngIf="event.originatingObject as object"
+              [ngSwitch]="object.__typename">
+              <cvc-revision-tag *ngSwitchCase="'Revision'"
+                [revision]="object"></cvc-revision-tag>
+              <cvc-comment-tag *ngSwitchCase="'Comment'"
+                [comment]="object"></cvc-comment-tag>
+              <cvc-flag-tag *ngSwitchCase="'Flag'"
+                [flag]="object"></cvc-flag-tag>
+              <span nz-typography
+                *ngSwitchDefault>{{ object.name }}</span>
             </ng-container>
-            <ng-container *ngSwitchCaseDefault>{{ event.subject.name }}</ng-container>
-          </ng-container>
 
-          <!-- user organization -->
-          <ng-container *ngIf="event.organization">
-            <span nz-typography>on behalf of&nbsp;</span>
-            <cvc-org-tag [org]="event.organization"></cvc-org-tag>
-          </ng-container>
+            <!-- preposition -->
+            <span nz-typography>{{ prepositionForSubject(event) }}&nbsp;</span>
 
-        </nz-col>
-        <nz-col nzFlex="80px" class="timestamp">
-          <div nz-tooltip
-            nzTooltipPlacement="top"
-            [nzTooltipTitle]="event.createdAt | date">
-            {{ event.createdAt | timeago }}
-          </div>
-        </nz-col>
+            <!-- subject -->
+            <ng-container *ngIf="event.subject as subject"
+              [ngSwitch]="subject.__typename">
+              <cvc-gene-tag *ngSwitchCase="'Gene'"
+                [gene]="subject"></cvc-gene-tag>
+              <ng-container *ngSwitchCaseDefault>{{ subject.name }}</ng-container>
+            </ng-container>
+
+            <!-- user organization -->
+            <ng-container *ngIf="event.organization as org">
+              <span nz-typography>for&nbsp;</span>
+              <cvc-org-tag [org]="org"></cvc-org-tag>
+            </ng-container>
+
+          </nz-col>
+          <nz-col nzFlex="100px"
+            class="timestamp">
+            <span nz-tooltip
+              nzTooltipPlacement="top"
+              [nzTooltipTitle]="event.createdAt | date">
+              {{ event.createdAt | timeago }}
+            </span>
+          </nz-col>
+        </ng-container>
+
+        <!-- comment card -->
+        <ng-container *ngSwitchCase="'Comment'">
+          <ng-container *ngIf="event.originatingObject as object" >
+            <nz-card [nzTitle]="cardTitle" [nzExtra]="cardExtra" class="comment-card">
+              <ng-template #cardTitle>
+                <div class="comment-title" >
+                  <!-- commenter -->
+                  <cvc-user-tag [user]="event.originatingUser"></cvc-user-tag>
+
+                  <!-- verb -->
+                  <span nz-typography>commented on</span>
+
+                  <!-- comment subject -->
+                  <ng-container *ngIf="event.subject as subject"
+                    [ngSwitch]="subject.__typename">
+                    <cvc-gene-tag *ngSwitchCase="'Gene'"
+                      [gene]="subject"></cvc-gene-tag>
+                    <ng-container *ngSwitchCaseDefault>{{ subject.name }}</ng-container>
+                  </ng-container>
+
+                  <!-- comment timestamp -->
+                  <span nz-typography
+                    nz-tooltip
+                    nzTooltipPlacement="top"
+                    [nzTooltipTitle]="event.createdAt | date">{{ event.createdAt | timeago }}</span>
+                </div>
+              </ng-template>
+              <!-- object.comment below fails with error
+                   Property 'comment' does not exist on type '{ __typename: "Flag"; }
+                   & Pick<Flag, "id" | "name"> & { openComment: { __typename: "Comment"; }
+                   & Pick<Comment, "comment">; resolutionComment?: Maybe<{ ...; } & Pick<...>>; }'.
+              -->
+              <!-- {{ object.comment }} -->
+              <pre>{{ object | json }}</pre>
+              <ng-template #cardExtra>
+                <div class="comment-extra" >
+                  <cvc-comment-tag [comment]="object"></cvc-comment-tag>
+                </div>
+              </ng-template>
+            </nz-card>
+          </ng-container>
+        </ng-container>
       </nz-row>
 
       <!-- <ng-container *ngIf="event.originatingObject"
