--- a/client/src/app/components/shared/event-timeline/event-timeline.component.less
+++ b/client/src/app/components/shared/event-timeline/event-timeline.component.less
@@ -4,14 +4,30 @@
   display: block;
 }
 
+.item-icon {
+  font-size: 22px;
+}
+
 .timeline-item {
-  .item-icon {
-    font-size: 24px;
-  }
   .description, .timestamp {
     margin-top: 2px;
   }
   .description {
     margin-left: @margin-sm;
   }
+}
+
+.timestamp {
+  text-align: right;
+}
+
+.comment-title {
+  padding-right: @default-padding-lg;
+  span {
+    font-weight: normal;
+  }
+}
+
+.comment-extra {
+  margin-right: -@margin-sm;
 }
