Only show organization event filter if not on an org page

--- a/client/src/app/components/shared/event-feed/event-feed.component.html
+++ b/client/src/app/components/shared/event-feed/event-feed.component.html
@@ -46,7 +46,7 @@
             </nz-select>
           </nz-form-control>
         </nz-form-item>
-        <nz-form-item>
+        <nz-form-item *ngIf="!organizationId">
           <nz-form-control>
             <nz-select (ngModelChange)="onOrganizationSelected($event)"
               nzSize="small"
