--- a/client/src/app/components/shared/event-timeline/event-timeline.component.less
+++ b/client/src/app/components/shared/event-timeline/event-timeline.component.less
@@ -5,7 +5,7 @@
 }
 
 .item-icon {
-  font-size: 22px;
+  font-size: 18px;
 }
 
 .timeline-item {
@@ -13,7 +13,7 @@
     margin-top: 2px;
   }
   .description {
-    margin-left: @margin-sm;
+    margin-left: @margin-xs;
   }
 }
 
@@ -28,6 +28,6 @@
   }
 }
 
-.comment-extra {
-  margin-right: -@margin-sm;
+.comment-card {
+  width: 100%;
 }
