added popovers to timelined description entity tags

--- a/client/src/app/components/shared/org-tag/org-tag.component.html
+++ b/client/src/app/components/shared/org-tag/org-tag.component.html
@@ -1,4 +1,9 @@
-<nz-tag nzColor="cyan">
-  <i nz-icon nzType="civic-organization"></i>
-  {{ org.name }}
+<nz-tag nzColor="cyan"
+  nz-popover
+  [nzPopoverContent]="orgPopover">
+  <i nz-icon
+    nzType="civic-organization"></i> {{ org.name }}
 </nz-tag>
+<ng-template #orgPopover>
+  <cvc-org-hovercard [orgId]="org.id"></cvc-org-hovercard>
+</ng-template>
