--- a/client/src/app/components/shared/user-pill/user-pill.component.html
+++ b/client/src/app/components/shared/user-pill/user-pill.component.html
@@ -1,4 +1,4 @@
-<nz-space nzAlign="center" nz-popover [nzPopoverMouseEnterDelay]="0.5" [nzPopoverContent]="userHovercard" nzPopoverPlacement="topCenter">
+<nz-space nzAlign="center" nz-popover [nzPopoverMouseEnterDelay]="0.5" [nzPopoverContent]="userHovercard">
     <nz-space-item>
         <cvc-user-avatar [user]="user" size="small"></cvc-user-avatar>
     </nz-space-item>
