--- a/client/src/app/components/shared/user-hovercard/user-hovercard.component.html
+++ b/client/src/app/components/shared/user-hovercard/user-hovercard.component.html
@@ -30,9 +30,9 @@
           [nzColumn]="2"
           nzBordered="true">
           <nz-descriptions-item nzTitle="Organizations">
-            <div *ngIf="user.organizations.length > 0; else noOrganizations" class="tag-container">
+            <cvc-tag-list *ngIf="user.organizations.length > 0; else noOrganizations">
               <cvc-org-tag *ngFor="let o of user.organizations" [org]="o"></cvc-org-tag>
-            </div>
+            </cvc-tag-list>
           </nz-descriptions-item>
         </nz-descriptions>
       </nz-col>
