improved tag-list styles

--- a/client/src/app/components/shared/tag-list/tag-list.component.less
+++ b/client/src/app/components/shared/tag-list/tag-list.component.less
@@ -7,10 +7,16 @@
   margin-bottom: -@default-padding-xs;
 }
 
+// > * selects all direct children and no deeper
 .tag-list ::ng-deep > * {
-  // immediate child element might be displayed inline (span or anchor),
-  // need to set to inline block to ensure margin will be applied
+  // direct child element might be inline (span or anchor),
+  // need to set to inline-block to ensure margin will be applied
   display: inline-block;
   // add bottom margin to tags to ensure gap between wrapped rows of tags
   margin-bottom: @default-padding-xs;
+}
+.tag-list ::ng-deep > *:last-child {
+  // remove right margin from last tag to prevent extra gap between it
+  // and parent container
+  margin-right: -@margin-sm;
 }
