better tag-list component & style documentation

--- a/client/src/app/components/shared/tag-list/tag-list.component.less
+++ b/client/src/app/components/shared/tag-list/tag-list.component.less
@@ -2,9 +2,9 @@
 
 :host {
   display: block;
-  // pull up the bottom margin of the card by the same height as the tag
-  // margins we apply above otherwise the bottom margin will be too large
-  margin-bottom: -@default-padding-xs;
+  // pull up the bottom margin of the list container by the same height as the tag
+  // margins we apply below, otherwise the bottom padding will be too large
+  margin-bottom: -@margin-sm;
 }
 
 // > * selects all direct children and no deeper
@@ -13,7 +13,7 @@
   // need to set to inline-block to ensure margin will be applied
   display: inline-block;
   // add bottom margin to tags to ensure gap between wrapped rows of tags
-  margin-bottom: @default-padding-xs;
+  margin-bottom: @margin-sm;
 }
 .tag-list ::ng-deep > *:last-child {
   // remove right margin from last tag to prevent extra gap between it
