created org-popover component, refactored from org-pill

--- a/client/src/app/components/shared/org-tag/org-tag.component.html
+++ b/client/src/app/components/shared/org-tag/org-tag.component.html
@@ -5,5 +5,5 @@
     nzType="civic-organization"></i> {{ org.name }}
 </nz-tag>
 <ng-template #orgPopover>
-  <cvc-org-hovercard [orgId]="org.id"></cvc-org-hovercard>
+  <cvc-org-popover [orgId]="org.id"></cvc-org-popover>
 </ng-template>
