--- a/client/src/themes/overrides/entity-popover.overrides.less
+++ b/client/src/themes/overrides/entity-popover.overrides.less
@@ -50,7 +50,8 @@
   border-bottom: 1px solid @border-color-split;
 }
 #popover-content {
-  // need to specify a width to popover content or else it won't be able to correctly calculate its display position
+  // need to specify a width to popover content or else it won't be able to
+  // correctly calculate its display position
   min-width: 400px;
-  max-width: 600px;
+  max-width: 500px;
 }
