refactored gene-hovercard to gene-popover

--- a/client/src/app/components/shared/user-tag/user-tag.component.html
+++ b/client/src/app/components/shared/user-tag/user-tag.component.html
@@ -2,7 +2,7 @@
   nz-popover
   [nzPopoverMouseEnterDelay]="0.5"
   [nzPopoverContent]="userPopover"
-  nzPopoverTrigger="click"
+  nzPopoverTrigger="hover"
   nzPopoverPlacement="topCenter">
   <i nz-icon
     [nzType]="icon"></i> {{ user.displayName }}
