--- a/client/src/app/components/shared/event-feed/event-feed.component.html
+++ b/client/src/app/components/shared/event-feed/event-feed.component.html
@@ -29,7 +29,7 @@
             </nz-select>
           </nz-form-control>
         </nz-form-item>
-        <nz-form-item>
+        <nz-form-item *ngIf="!userId">
           <nz-form-control>
             <nz-select (ngModelChange)="onParticipantSelected($event)"
               nzSize="small"
